reinstate JAXB dependencies, using servicemix version instead